[tool.poetry]
name = "cartographer_tuner"
version = "0.0.1"
description = "A toolkit for Google-Cartographer tuning."
authors = ["Vsevolod Vaskin", ]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12"
numpy = ">=1.26.4"
pyyaml = ">=5.4.1"
map-metrics = { git = "https://github.com/Seva-Vaskin/map-metrics.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
